@@ -221,7 +221,7 @@
 
 <addon id="script.module.metahandler"
      name="metahandler"
-     version="2.4.0.001"
+     version="2.4.0.002"
      provider-name="Eldorado">
   <requires>
     <import addon="xbmc.python" version="2.1.0" />
